syntax = "proto3";

import "AdjustTrackingInfo.proto";
import "TrackingIOInfo.proto";

option java_package = "org.sorapointa.proto";

message PlayerLoginReq {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 156;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  //   IS_ALLOW_CLIENT = 1;
  // }

  string device_uuid = 5;
  uint32 target_uid = 10;
  bytes extra_bin_data = 2046;
  string platform = 4;
  string checksum = 1334;
  uint32 channel_id = 1565;
  string client_verison_hash = 2040;
  uint32 language_type = 11;
  uint32 client_data_version = 847;
  uint32 account_type = 7;
  string security_library_md5 = 868;
  string online_id = 577;
  uint32 cloud_client_ip = 82;
  string device_name = 12;
  string birthday = 875;
  uint32 tag = 525;
  string account_uid = 14;
  string device_info = 15;
  uint32 sub_channel_id = 1458;
  bool is_editor = 1;
  string token = 8;
  uint32 reg_platform = 424;
  string checksum_client_version = 581;
  uint32 client_port = 85;
  uint32 target_home_param = 1320;
  string country_code = 104;
  uint32 gm_uid = 1790;
  TrackingIOInfo tracking_io_info = 1713;
  bool is_transfer = 624;
  string security_library_version = 828;
  string client_version = 2;
  bool is_guest = 13;
  string system_version = 6;
  uint32 target_home_owner_uid = 899;
  string psn_id = 1146;
  bytes security_cmd_reply = 874;
  uint32 client_token = 1028;
  uint64 login_rand = 9;
  AdjustTrackingInfo adjust_tracking_info = 64;
  bytes environment_error_code = 256;
  uint32 platform_type = 3;
  string cps = 1983;
}
