syntax = "proto3";

option java_package = "org.sorapointa.proto";

message PlayerSetPauseReq {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 122;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  //   IS_ALLOW_CLIENT = 1;
  // }

  bool is_paused = 15;
}
