syntax = "proto3";

option java_package = "org.sorapointa.proto";

message SetPlayerBornDataReq {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 142;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  //   IS_ALLOW_CLIENT = 1;
  // }

  string nick_name = 4;
  uint32 avatar_id = 14;
}
