syntax = "proto3";

option java_package = "org.sorapointa.proto";

message UnionCmd {
  bytes body = 3;
  uint32 message_id = 4;
}
