syntax = "proto3";

import "UnionCmd.proto";

option java_package = "org.sorapointa.proto";

message UnionCmdNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 42;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  //   IS_ALLOW_CLIENT = 1;
  // }

  repeated UnionCmd cmd_list = 7;
}
